fix: spacing in hero display

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -187,7 +187,8 @@ section.display-hero {
 }
 @media (min-width: 1400px) {
   section.display-hero {
-    padding-block: 14rem;
+    padding-top: 14rem;
+    padding-bottom: 5rem;
   }
 }
 section.display-hero .content {
