--- a/resources/scss/components/display-hero.scss
+++ b/resources/scss/components/display-hero.scss
@@ -9,7 +9,8 @@ section.display-hero {
   }
 
   @media (min-width: 1400px) {
-    padding-block: 14rem;
+    padding-top: 14rem;
+    padding-bottom: 5rem;
   }
 
   .content {
